fix spacing

--- a/src/assets/media.css
+++ b/src/assets/media.css
@@ -79,8 +79,8 @@
     border-bottom: 1px solid #ebecef;
     padding-right: 30px;
     padding-left: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
 
   .explorerCard:last-child {
